components/cv-experience/timeline.module.scss
@use "@/styles/mixins";
@use "@/styles/variables";

.timeline {
  $year-height: 30px;

  position: relative;
  width: 100%;
  overflow: hidden;

  // Use more space on tablet and mobile
  @include mixins.until(variables.$breakpoint-lg) {
    margin-left: -0.5rem;
    margin-right: -1rem;
    width: calc(100% + 1.5rem);
  }

  .jobRow {
    position: relative;
    height: 120px;
    width: 100%;
    mask-image: linear-gradient(105deg,
        transparent 20px,
        #000 50px,
        #000 calc(100% - 50px),
        transparent calc(100% - 20px));

    &:first-child {
      mask-image: linear-gradient(105deg,
          #000 calc(100% - 50px),
          transparent calc(100% - 20px));
    }

    &:last-child {
      mask-image: linear-gradient(105deg, transparent 20px, #000 50px);

      .job:last-child {
        border-right-width: 0;
        border-top-right-radius: 0;
      }
    }
  }

  .jobsWrapper {
    position: absolute;
    bottom: $year-height;
    left: 1%;
    height: calc(100% - #{$year-height});
    width: 100%;
    transform: skew(-15deg);
  }

  .job {
    position: absolute;
    bottom: -1px;
    height: 100%;
    border: 1px solid var(--text-color);
    border-radius: 4px 4px 0 0;
    font-size: 13px;
    line-height: 1.2;
    word-break: break-word;
    font-weight: 700;
    background-color: rgba(variables.$accent-color, 0.5);
    padding: 5px 5px 5px 10px;
    cursor: pointer;
    overflow: hidden;
    transition: background-color 200ms;

    @include mixins.tablet-only {
      font-size: 12px;
    }

    @include mixins.mobile {
      font-size: 11px;
    }

    &.isBreak {
      background-color: rgba(variables.$secondary-light-color, 0.5);

      &:hover {
        background-color: var(--color-secondary-light);
      }
    }

    &:hover {
      background-color: var(--color-accent);
      color: #000;
      z-index: 3 !important;
    }

    .jobText {
      transform: skew(15deg);
    }
  }

  .yearsWrapper {
    position: absolute;
    bottom: 30px;
    width: 100%;
    z-index: 5;

    .year {
      top: 0;
      position: absolute;
      height: $year-height;
      border-top: 1px solid var(--text-color);
      padding-top: 2px;
      text-align: center;
      font-size: 14px;

      &::after {
        font-size: 16px;

        @include mixins.rhombus(var(--text-color));

        content: "";
        top: -4px;
        left: calc(50% - 4px);
        background-color: var(--background-color);
      }

      &:last-child::before {
        @include mixins.arrow(var(--text-color));

        content: "";
        border-width: 1px !important;
        transform: rotate(-135deg);
        right: 2px;
        top: 1px;
        border-radius: 0;
      }
    }
  }

  .nowMarker {
    top: -4px;
    margin-left: min(1vw, 14px);
    /* @TODO: Replace this hack with proper fix of Marker position */
    position: absolute;
    width: 8px;
    height: 8px;
    border: 2px var(--accent-color) solid;
    border-radius: 100%;
    background-color: var(--background-color);
    z-index: 1;

    &::after {
      content: "NOW";
      position: absolute;
      top: -32px;
      left: 2px;
      transform: rotate(-75deg);
      font-size: 0.7em;
      font-weight: 700;
      color: var(--accent-color);
    }
  }
}

